--- a/templates/pred.html
+++ b/templates/pred.html
@@ -142,6 +142,7 @@
                         <li>BITS Pilani</li>
                         <li>KIIT</li>
                         <li>Great Lakes Institute of Management</li>
+                        <li>DJSCE</li>
                     </ul>
                 </div>
                 <p>For more options</p>
@@ -152,7 +153,7 @@
                     Colleges coming under this are:
                     <ul>
                         <li>Amity</li>
-                        <li>IIM</li>
+                        <li>Manipal</li>
                     </ul>
                 </div>
                 <p>For more options</p>
